5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1800_2572.log
== TEST (2019-06-12 11:50:59) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0
b = 0

for i in range(size(tur)):
	if tur[i] % 2 == 0: 
		a = a + 1
	else:
		b = b + 1
c = zeros(b, dtype=int)
print(a)
print(b)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:58:45) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0
b = 0

for i in range(size(tur)):
	if tur[i] % 2 == 0: 
		a = a + 1
	else:
		b = b + 1
c = zeros(b, dtype=int)

for i in range(size(tur)):
	if tur[i] % 2 == 0: 
		c[i] = c[i] + tur[i]
print(c)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:59:42) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0
b = 0

for i in range(size(tur)):
	if tur[i] % 2 == 0: 
		a = a + 1
	else:
		b = b + 1
c = zeros(b, dtype=int)

for i in range(size(tur)):
	if tur[i] % 2 == 0: 
		c[i] = tur[i]
print(c)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:00:32) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0
b = 0

for i in range(size(tur)):
	if tur[i] % 2 == 0: 
		a = a + 1
	else:
		b = b + 1
c = zeros(b, dtype=int)

for i in range(size(tur)):
	if tur[i] % 2 == 0: 
		c[i] = tur[i]
print(c)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:01:11) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0
b = 0

for i in range(size(tur)):
	if tur[i] % 2 == 0: 
		a = a + 1
	else:
		b = b + 1
c = zeros(b, dtype=int)

for i in range(size(tur)):
	if tur[i] % 2 != 0: 
		c[i] = tur[i]
print(c)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:06:33) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0
b = 0
c = zeros(b, dtype=int)
for i in range(size(tur)):
	if tur[i] % 2 == 0: 
		a = a + 1
	else:
		b = b + 1
		c[i] = c[i] + tur[i]

print(c)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:08:07) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0
b = 0
d = 0
c = zeros(b, dtype=int)
for i in range(size(tur)):
	if tur[i] % 2 == 0: 
		a = a + 1
	else:
		c[d] = c[d] + tur[i]
		b = b + 1
		d = d + 1 

print(c)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:08:20) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0
b = 0
d = 0
c = zeros(b, dtype=int)
for i in range(size(tur)):
	if tur[i] % 2 == 0: 
		a = a + 1
	else:
		c[d] = c[d] + tur[i]
		b = b + 1
		d = d + 1 

print(c)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:12:40) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0
b = 0

c = zeros(b, dtype=int)
for i in range(size(tur)):
	if tur[i] % 2 == 0: 
		a = a + 1
	else:
		
		b = b + 1
c = zeros(b, dtype=int)
x = 0 		
for i in range(size(tur)):
	if tur[i]!= 0:
		c[x] = c[x] + tur[i]
		x = x + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:01:46) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0
b = 0

c = zeros(b, dtype=int)
for i in range(size(tur)):
	if tur[i] % 2 == 0: 
		a = a + 1
	else:
		b = b + 1
c = zeros(b, dtype=int)

print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:02:59) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0
b = 0

c = zeros(b, dtype=int)
for i in range(size(tur)):
	if tur[i] % 2 == 0: 
		a = a + 1
	else:
		b = b + 1
c = zeros(b, dtype=int)

print(c)
-- EXECUTION TIME:
0.911382
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[0 0]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[0 0 0 0]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:04:06) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0


c = zeros(a, dtype=int)
for i in range(size(tur)):
	if tur[i] % 2 != 0: 
		a = a + 1
c = zeros(a, dtype=int)

x = 0 

print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:06:09) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0


c = zeros(a, dtype=int)
for i in range(size(tur)):
	if tur[i] % 2 != 0: 
		c[a] = c[a] + tur[i]
		a = a + 1

print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:22:15) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0


c = zeros(a, dtype=int)
for i in range(size(tur)):
	if tur[i] % 2 != 0: 
		a = a + 1
		

print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:23:31) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0
b = 0

c = zeros(a, dtype=int)
for i in range(size(tur)):
	if tur[i] % 2 != 0: 
		a = a + 1
	else:
		b = b + 1
		

print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:24:04) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0
b = 0

c = zeros(b, dtype=int)
for i in range(size(tur)):
	if tur[i] % 2 == 0: 
		a = a + 1
	else:
		b = b + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:24:25) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0
b = 0


for i in range(size(tur)):
	if tur[i] % 2 == 0: 
		a = a + 1
	else:
		b = b + 1
c = zeros(b, dtype=int)
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:28:24) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0
b = 0


for i in range(size(tur)):
	if tur[i] % 2 != 0: 
		a = a + 1
	
c = zeros(a, dtype=int)
for i in range(size(tur)):
	if tur[i]%2 != 0
	c[b] = tur[i]
	b = b +1
print(c)
-- ERROR:
File "XXXX", line 14
    if tur[i]%2 != 0
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:28:32) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0
b = 0


for i in range(size(tur)):
	if tur[i] % 2 != 0: 
		a = a + 1
	
c = zeros(a, dtype=int)
for i in range(size(tur)):
	if tur[i]%2 != 0:
	c[b] = tur[i]
	b = b +1
print(c)
-- ERROR:
File "XXXX", line 15
    c[b] = tur[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:29:04) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0
b = 0


for i in range(size(tur)):
	if tur[i] % 2 != 0: 
		a = a + 1
	
c = zeros(a, dtype=int)
for i in range(size(tur)):
	if tur[i]%2 != 0:
		c[b] = tur[i]
		b = b +1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:29:17) 
-- CODE:
from numpy import*

tur = array(eval(input("numero de matricula: ")))
a = 0
b = 0


for i in range(size(tur)):
	if tur[i] % 2 != 0: 
		a = a + 1
	
c = zeros(a, dtype=int)
for i in range(size(tur)):
	if tur[i]%2 != 0:
		c[b] = tur[i]
		b = b +1
print(c)
-- EXECUTION TIME:
1.14621
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
